--- a/src/index.css
+++ b/src/index.css
@@ -50,6 +50,11 @@ h1 {
   text-transform: uppercase;
 }
 
+.loading {
+  display: flex;
+  justify-content: center;
+}
+
 #meals {
   width: 90%;
   max-width: 70rem;
